--- a/TranslationMod/languages/RU/dictionaries/KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/KeyWords.json
@@ -139,8 +139,10 @@
         "Herring": "Сельдь",
         "Eel": "Угорь",
         "Octopus": "Осьминог",
+        "Octopi": "Осьминоги",
         "Red Snapper": "Красный берикс",
         "Squid": "Кальмар",
+        "Squids": "Кальмары",
         "Seaweed": "Водоросли",
         "Green Algae": "Зеленые Водоросли",
         "Sea Cucumber": "Морской Огурец",
@@ -906,21 +908,51 @@
         "Festival of Ice": "Фестиваль Льда",
         "Feast of the Winter Star": "Праздник Зимней Звезды"
     },
-    "SpousalEndearment":{
-        "Pookie":"",
-        "Love":"",
-        "Hot Stuff":"",
-        "Cuddlebug":"",
-        "Peach":"",
-        "Hunky":"",
-        "Cutie":"",
-        "Ducky":"",
-        "Darling":"",
-        "Handsome":"",
-        "Honey":"",
-        "Dear":"",
-        "Sweetie":"",
-        "Hun":"",
-        "Sweetheart":""        
+    "SpousalEndearment": {
+        "Pookie": "",
+        "Love": "",
+        "Hot Stuff": "",
+        "Cuddlebug": "",
+        "Peach": "",
+        "Hunky": "",
+        "Cutie": "",
+        "Ducky": "",
+        "Darling": "",
+        "Handsome": "",
+        "Honey": "",
+        "Dear": "",
+        "Sweetie": "",
+        "Hun": "",
+        "Sweetheart": ""
+    },
+    "Quests": {
+        "Fishing":"",
+        "fisherman": "",
+        "fishing enthusiast": "",
+        "Delivery": "",
+        "soup":"",
+        "pizza":"",
+        "salad":"",
+        "stew":"",
+        "casserole":"",
+        "stir-fry":"",
+        "calzone":"",
+        "taco":"",
+        "burrito":"",
+        "dish":"",
+        "dessert":"",
+        "new recipe":"",
+        "knee":"",
+        "elbow":"",
+        "back":"",
+        "head":"",
+        "nose":"",
+        "toe":"",
+        "gums":"",
+        "ear":"",
+        "legs":"",
+        "tooth":"",
+        "hip":"",
+        "calves":""
     }
 }
