Add Game1.json, QuestsOther.json, more optimization, fixes

--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -51,7 +51,7 @@
     "Total Found: @number": "Всего найдено: @number",
     "Times Cooked: @number": "Приготовлено раз: @number",
     "Number Caught: @number": "Поймано раз: @number",
-    "Biggest Catch: @number in.": "Наибольший улов: @number дюйм.",
+    "Biggest Catch: @number in.": "Наибольший улов: @number д.",
     "Number Found: @number": "Кол-во найдено: @number",
     "Number Shipped: @number": "Кол-во продано: @number",
     "Join Valley": "",
@@ -165,7 +165,7 @@
     "Backwoods": "",
     "Bus Stop": "",
     "Wizard's Tower": "",
-    "Marnie's Ranch Open 9:00AM to 4:00PM most days": "",
+    "Marnie's Ranch @newline Open 9:00AM to 4:00PM most days": "Ранчо Марни @newline Открыто с 9:00AM до 4:00PM большиство дней",
     "Leah's Cottage": "",
     "1 Willow Lane @newline Home of Jodi, Kent & Sam": "",
     "2 Willow Lane @newline Home of Emily & Haley": "",
@@ -315,6 +315,8 @@
     "+@number Pickaxe Efficiency": "",
     "+@number Health": "+@number Здоровья",
     "+@number Energy": "+@number Энергии",
+    "0 Health": "0 Здоровья",
+    "0 Energy": "0 Энергии",
     "-@number Hoe Efficiency @newline -@number Water Can Efficiency": "",
     "-@number Fishing Rod Efficiency": "",
     "-@number Axe Efficiency": "",
