--- a/TranslationMod/languages/RU/dictionaries/Quests.json
+++ b/TranslationMod/languages/RU/dictionaries/Quests.json
@@ -20,7 +20,6 @@
 	"One time I caught one the size of a baby cow!":"",
     "Sometimes they seem so smart, it's scary.": "",
     "Talk to @key": "",
-    "0/@number @key caught": "",
     "@number/@number @key caught": "",
     
     "__comment": "ItemDeliveryQuest.cs",    
@@ -134,12 +133,14 @@
     "Looking for an @key. Will pay a flat rate on delivery.          -@key@newline@newline- @numberg on delivery@newline- @key":"",
     "Looking for a @key. Cash payment on delivery.          -@key@newline@newline- @numberg on delivery@newline- @key":"",
     "Looking for an @key. Cash payment on delivery.          -@key@newline@newline- @numberg on delivery@newline- @key":"",    
-    ". Could someone bring me a @key? . I love them.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",
+    ". Could someone bring me a @key? . I love them.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"Может кто-нибудь принести мне @key? . Я их обожаю.@newline          -@key@newline@newline- @numberg за доставку@newline- @key",
     ". Could someone bring me an @key? . I love them.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"", 
     ". Could someone bring me a @key? . I can't get enough of them!@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",  
     ". Could someone bring me an @key? . I can't get enough of them!@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",
-    ". Could someone bring me a @key? . . I could use one.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",    
-    ". Could someone bring me an @key? . . I could use one.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",  
+    ". Could someone bring me a @key? . I could use one.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",    
+    ". Could someone bring me an @key? . I could use one.@newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",  
+    ". Could someone bring me a @key?@newline         -@key@newline@newline- @numberg on delivery@newline- @key":"Может кто-нибудь принести мне @key? @newline          -@key@newline@newline- @numberg за доставку@newline- @key",  
+    ". Could someone bring me an @key?@newline         -@key@newline@newline- @numberg on delivery@newline- @key":"",  
     "Does anyone have an extra @key laying around?  -@key@newline@newline- @numberg on delivery@newline- @key":"",
     "Does anyone have an extra @key?  -@key@newline@newline- @numberg on delivery@newline- @key":"",
     "I need a @key, if It's not too inconvenient. @newline          -@key@newline@newline- @numberg on delivery@newline- @key":"",
@@ -153,7 +154,9 @@
     "@key would like to hire someone to fetch an @key. You will be paid for your time.@newline@newline- @numberg on delivery@newline- @key":"",
     "Buying 1 @key at twice the market value! Please deliver directly to me     -@key@newline@newline- @numberg on delivery@newline- @key":"",
     "Buying 1 @key at twice the market value! Please deliver directly into my hands.     -@key@newline@newline- @numberg on delivery@newline- @key":"",    
-    
+    "Bring @key a @key":"Принести @keyR @keyV",
+    "Bring @key an @key":"Принести @keyR @keyV",
+
     "__comment":"Oh! Is that the @key I requested? Thanks so much!$h#$b# Here's a little something for your trouble.",
     "__comment":"Hello @player! Is that the @key I requested? I really appreciate it.$h#$b# ...Let's see. Here's what I owe you.",
     "@key Is that the @key I requested? @key$h#$b# @key":"",
