--- a/TranslationMod/languages/RU/dictionaries/QuestsOther.json
+++ b/TranslationMod/languages/RU/dictionaries/QuestsOther.json
@@ -1,4 +1,5 @@
 {
+    "@number Day":"@number День",
 "__comment": "LostItemQuest.cs",
     "You found the @key. Better return it to @key.":"",
     "Return to @key.":"",
