--- a/TranslationMod/languages/RU/dictionaries/GameLocation.json
+++ b/TranslationMod/languages/RU/dictionaries/GameLocation.json
@@ -134,7 +134,13 @@
 	"Altar of Yoba":"",
 	"Teleports you to your farm.":"",
 	"The wand draws mystical energy from the altar of Yoba. You can now use it to teleport back to your farm!":"",
-	"'@key' by Elliott ... Dedicated to @key":"",
+    "'@key' by Elliott ... Dedicated to @key": "",
+    "It's locked...": "Закрыто...",
+    "Closed on Wednesdays.": "Закрыто по средам.",
+    "It's locked... (Open @numberam - @numberpm)": "Закрыто... (Открыто с @numberam по @numberpm)",
+    "It's locked... (Open @numberpm - @numberam)": "Закрыто... (Открыто с @numberpm по @numberam)",
+    "It's locked... Only @key's friends can enter uninvited.": "Закрыто... Только друзья @keyR могут войти без приглашения.",
+    "It's locked": "Закрыто",
 	"Tips On Farming--^*Use fertilizer to improve quality, reduce workload, or hasten crop growth.^*Fruit trees take a whole season to grow, but they require very little maintenance. Keep the area directly around your new sapling clear, or else it may not grow properly.^*Crops will die as soon as the season ends, unless they grow in multiple seasons (e.g. Corn).^*Some crops, such as kale and wheat, need to be harvested with the scythe.":"",
 	"...This is a book by Marnie.^ 'Animals are very sensitive. They like to be pet every day, and prefer to eat grass outdoors than dry hay. They don't like being outside in the rain, though. Happy animals produce higher quality products!'":"",
 	"On Foraging^ The local woods and mountains are great places to find wild produce! A good forager will clear out any weeds, stumps, or stones from these areas, so the wild produce has plenty of space to grow!^Expert foragers know the secret to cultivating wild food so that it can be grown on the farm. Isn't that amazing?":"",
