--- a/TranslationMod/languages/RU/dictionaries/Locations.json
+++ b/TranslationMod/languages/RU/dictionaries/Locations.json
@@ -104,7 +104,7 @@
 	"Um... Honey? Why are there monsters in the house?":"",
 	"It's locked. You can hear someone inside, though.":"",
 	"You unlock the sewer hatch with the Rusty Key!":"",
-	"It's locked...":"",
+	"It's locked...":"Закрыто...",
 	"It looks abandoned...":"",
 	"If you become a Joja Member, the community center will become a Joja Warehouse, and you will no longer be able to refurbish it. However, Joja will provide an alternative means to improving the town. Are you sure you want to join?":"",
 	"Excellent! Welcome to Joja Corporation! Come back tomorrow and we can see about getting started on some community development projects... Oh, and don't forget your wallet! Hehe.#$b#Now, let me call Mayor Lewis and see about gutting that nasty old community center...":"",
