--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -33,7 +33,6 @@
     "Must be deposited at Community Center": "",
     "Can't demolish during construction": "",
     "Can't demolish until animals are relocated": "",
-    "Incorrect Building Type": "",
     "Okay, I'll start working on your new @key the day after tomorrow. I always take festivals off.": "",
     "Okay, I'll start working on your @key upgrade the day after tomorrow. I always take festivals off.": "",
     "Okay, I'll start working on your new @key first thing tomorrow morning!": "",
@@ -43,7 +42,6 @@
     "Only the farm owner can demolish.": "",
     "Someone's in there!": "",
     "You can't build that in this location.": "",
-    "Skip Intro": "",
     " Invalid Command ::": "",
     " Invalid Command Arguments ::": "",
     "Summer (The Sun Can Bend An Orange Sky)": "",
@@ -198,54 +196,54 @@
     "New Reward!": "",
     "Press new key...": "",
     "Key already in use. Try again...": "",
-    "General:": "",
-    "Auto Run": "",
-    "Show Portraits": "",
-    "Show Merchant Portraits": "",
-    "Always Show Tool Hit Location": "",
-    "Hide Tool Hit Location When Moving": "",
-    "Pause When Game Window Is Inactive": "",
-    "Sound:": "",
-    "Music Volume": "",
-    "Sound Volume": "",
-    "Ambient Volume": "",
-    "Footstep Volume": "",
-    "Dialogue Typing Sound": "",
-    "Graphics:": "",
-    "Window Mode": "",
-    "Resolution": "",
-    "Menu Backgrounds": "",
-    "Lock Toolbar": "",
-    "Zoom Level": "",
+    "General:": "Общие",
+    "Auto Run": "Автобег",
+    "Show Portraits": "Показывать портреты",
+    "Show Merchant Portraits": "Показывать портреты торговцев",
+    "Always Show Tool Hit Location": "Показывать область взаимодействия",
+                                     
+    "Hide Tool Hit Location When Moving": "Скрыть обл. взаим-ия при движении",
+    "Pause When Game Window Is Inactive": "Пауза когда окно игры не активно",
+    "Language": "Язык игры",
+    "Sound:": "Звук",
+    "Music Volume": "Громкость музыки",
+    "Sound Volume": "Громкость игры",
+    "Ambient Volume": "Громкость окружения",
+    "Footstep Volume": "Громкость походки",
+    "Dialogue Typing Sound": "Звук печатания диалогов",
+    "Graphics:": "Графика",
+    "Window Mode": "Оконный режим",
+    "Resolution": "Разрешение",
+    "Menu Backgrounds": "Фон меню",
+    "Lock Toolbar": "Закрепить панель интрументов",
+    "Zoom Level": "Уровень приближения",
     "Zoom Buttons": "Кнопки приблежения",
-    "Lighting Quality": "",
-    "Low": "",
-    "Med.": "",
-    "High": "",
-    "Snow Transparency": "",
-    "Show Flash Effects": "",
-    "Controls:": "",
-    "Controller Rumble": "",
-    "Invert Toolbar Scroll Direction": "",
-    "Reset Controls To Default": "",
-    "Check/Do Action": "",
-    "Use Tool": "",
-    "Access Menu": "",
-    "Access Journal": "",
-    "Access Map": "",
-    "Move Up": "",
-    "Move Left": "",
-    "Move Down": "",
-    "Move Right": "",
-    "Chat Box": "",
-    "Run": "",
-    "Inventory Slot #@number": "",
+    "Lighting Quality": "Качество освещения",
+    "Low": "Низ.",
+    "Med.": "Сред.",
+    "High": "Выс.",
+    "Snow Transparency": "Прозрачность снега",
+    "Show Flash Effects": "Блеск снега",
+    "Controls:": "Управление",
+    "Controller Rumble": "Обратная отдача контроллера",
+    "Invert Toolbar Scroll Direction": "Инверт. прокрутку панели интрум.",    
+    "Reset Controls To Default": "Сброс настроек управления",
+    "Check/Do Action: Right-Click, @key": "Проверить/Выполнить: R-Click, @key",
+    "Use Tool: Left-Click, @key": "Использовать: L-Click, @key",
+    "Access Menu: Escape, @key": "Меню: Escape, @key",
+    "Access Journal: @key": "Журнал: @key",
+    "Access Map: @key": "Карта: @key",
+    "Move Up: @key": "Вверх: @key",
+    "Move Left: @key": "Влево: @key",
+    "Move Down: @key": "Вниз: @key",
+    "Move Right: @key": "Вправо: @key",
+    "Chat Box: @key": "Окно чата: @key",
+    "Run: @key": "Бег: @key",
+    "Inventory Slot #@number": "Слот Инвенторя #@number",
     "Name Unavailable": "",
     "Great! I'll send little @key to his new home right away.": "",
     "Great! I'll send little @key to her new home right away.": "",
-    "That Building Is Full": "",
     "Purchased @key": "",
-    "@key Can't Live There.": "",
     "Not Enough Money": "",
     "Well cared-for adult chickens lay eggs every day.@newline Lives in the coop.": "",
     "Happy adults lay duck eggs every other day. @newline Lives in the coop.": "",
@@ -350,5 +348,6 @@
     "Skip": "Пропуск",
     "Loading": "Загрузка",
     "Winner!": "Победитель",
-    "You Lose": "Вы проиграли"
+    "You Lose": "Вы проиграли",
+    "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры"
 }
