--- a/TranslationMod/languages/RU/dictionaries/schedules.json
+++ b/TranslationMod/languages/RU/dictionaries/schedules.json
@@ -33,7 +33,7 @@
     "Now now, dear... It's important that Doctor Harvey takes a good look at you. He's a nice young man! Behave yourself, for your dear old wife's sake.": "",
     "Could you check his lungs? He's been wheezing lately.": "",
     "This place is full of memories for me. Thank you so much for restoring it.$h": "",
-    "Hmmpph... The wife's making me go to the clinic today.": "",
+    "Hmmpph... The wife's making me go to the clinic today.": "Хмммфф... Жена заставляет меня пойти сегодня в больницу",
     "*grumble*... Good for nothing doctors... *grumble*": "",
     "Well how much longer do I have, Doc?": "",
     "I've never been religious but hey... I'm old.": "",
