--- a/TranslationMod/languages/RU/dictionaries/KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/KeyWords.json
@@ -577,41 +577,41 @@
         "Shepherd": "",
         "Artisan": "",
         "Agriculturist": "",
-        "Fisher": "",
+        "Fisher": "Рыбак",
         "Angler": "",
-        "Pirate": "",
+        "Pirate": "Пират",
         "Mariner": "",
         "Luremaster": "",
-        "Forester": "",
+        "Forester": "Лесник",
         "Gatherer": "",
         "Lumberjack": "",
         "Tapper": "",
-        "Botanist": "",
+        "Botanist": "Ботаник",
         "Tracker": "",
-        "Miner": "",
-        "Geologist": "",
+        "Miner": "Шахтер",
+        "Geologist": "Геолог",
         "Blacksmith": "",
-        "Prospector": "",
+        "Prospector": "Золотоискатель",
         "Excavator": "",
         "Gemologist": "",
-        "Fighter": "",
-        "Scout": "",
-        "Brute": "",
-        "Defender": "",
-        "Acrobat": "",
+        "Fighter": "Боец",
+        "Scout": "Разведчик",
+        "Brute": "Дикарь",
+        "Defender": "Защитник",
+        "Acrobat": "Ловкач",
         "Desperado": ""
     },
     "StrengthGamePowers": {
         "Plankton": "",
-        "Skim Milk": "",
-        "Wet Tissue": "",
-        "Alfredo Sauce": "",
-        "Toothpick": "",
+        "Skim Milk": "Обезжиренное Молоко",
+        "Wet Tissue": "Влажные Салфетки",
+        "Alfredo Sauce": "Соус Альфредо",
+        "Toothpick": "Зубочистка",
         "Shrimp": "",
-        "Goldfish": "",
-        "Soggy Spaghetti": "",
-        "Baby Duck": "",
-        "Mouse": "",
+        "Goldfish": "Золотая рыбка",
+        "Soggy Spaghetti": "Сырые Макароны",
+        "Baby Duck": "Утенок",
+        "Mouse": "Мышь",
         "Carrot Stick": "",
         "Twig": "",
         "Trout": "",
@@ -621,28 +621,28 @@
         "Cardboard": "",
         "Balsa Wood": "",
         "Hardened Clay": "",
-        "Prairie Dog": "",
-        "Leather Boot": "",
-        "Hot Mustard": "",
-        "Scrap Metal": "",
+        "Prairie Dog": "Суслик",
+        "Leather Boot": "Кожаный Ботинок",
+        "Hot Mustard": "Острая Горчица",
+        "Scrap Metal": "Металлолом",
         "Sandstone": "",
-        "Sheep Dog": "",
-        "Small Donkey": "",
-        "Angry Hog": "",
-        "Boulder": "",
+        "Sheep Dog": "Овчарка",
+        "Small Donkey": "Маленький Ослик",
+        "Angry Hog": "Злобный Свин",
+        "Boulder": "Глыба",
         "Gym Teacher": "",
-        "Orc": "",
+        "Orc": "Орк",
         "Tree Trunk": "",
         "Iron": "",
-        "Bodybuilder": "",
-        "Mountain Troll": "",
-        "Lumberjack": "",
-        "Horse": "",
-        "Ox": "",
-        "Bulldozer": "",
-        "Gorilla": "",
-        "Mammoth": "",
-        "George's Knee": ""
+        "Bodybuilder": "Культурист",
+        "Mountain Troll": "Горный Тролль",
+        "Lumberjack": "Дровосек",
+        "Horse": "Лошадь",
+        "Ox": "Бык",
+        "Bulldozer": "Бульдозер",
+        "Gorilla": "Горилла",
+        "Mammoth": "Мамонт",
+        "George's Knee": "Колено Джорджа"
     },
     "Answers": {
         "Yes": "Да",
@@ -909,21 +909,21 @@
         "Feast of the Winter Star": "Праздник Зимней Звезды"
     },
     "SpousalEndearment": {
-        "Pookie": "",
-        "Love": "",
-        "Hot Stuff": "",
-        "Cuddlebug": "",
-        "Peach": "",
-        "Hunky": "",
-        "Cutie": "",
-        "Ducky": "",
-        "Darling": "",
-        "Handsome": "",
-        "Honey": "",
-        "Dear": "",
-        "Sweetie": "",
-        "Hun": "",
-        "Sweetheart": ""
+        "Pookie": "Солнышко^Пупсик",
+        "Love": "Любовь моя",
+        "Hot Stuff": "Горячий Парень^Горячая Штучка",
+        "Cuddlebug": "Лапочка",
+        "Peach": "Персик^Ягодка",
+        "Hunky": "Работяга",
+        "Cutie": "Милашка",
+        "Ducky": "Душка",
+        "Darling": "Любимый^Любимая",
+        "Handsome": "Красавчик^Красотка",
+        "Honey": "Милый^Милая",
+        "Dear": "Дорогой^Дорогая",
+        "Sweetie": "Сладкий^Сладкая",
+        "Hun": "Радость моя",
+        "Sweetheart": "Возлюбленный^Возлюбленная"
     },
     "Quests": {
         "Fishing":"",
